--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/e128854673.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Chat | Kakao Clone</title>
 </head>
 
@@ -25,7 +27,7 @@
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Best Friend</h1>
         </div>
@@ -33,9 +35,9 @@
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <div class="header__icon">
+            <span class="header__icon">
                 <i class="fas fa-bars"></i>
-            </div>
+            </span>
         </div>
     </header>
     <main class="chat">
