--- a/settings.html
+++ b/settings.html
@@ -41,24 +41,41 @@
         <section class="settings__sections">
             <ul class="settings__list">
                 <li class="settings__setting">
-                    <span class="settings__icon">
-                        <i class="fas fa-lock"></i>
-                    </span>
-                    <span class="settings title">Privacy</span>
+                    <span class="settings__icon"><i class="far fa-bell"></i> </span>
+                    <span class="settings__title">Notice</span>
                 </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-flask"></i>
+                    </span>
+                    <span class="settings__title">Kakao Lab</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-info-circle"></i>
+                    </span>
+                    <span class="settings__title">Version</span>
+                </li>
+            </ul>
+        </section>
 
+        <section class="settings__sections">
+            <ul class="settings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon"><i class="fas fa-lock"></i> </span>
+                    <span class="settings__title">Privacy</span>
+                </li>
                 <li class="settings__setting">
                     <span class="settings__icon">
                         <i class="far fa-bell"></i>
                     </span>
-                    <span class="settings title">Notifications</span>
+                    <span class="settings__title">Notifications</span>
                 </li>
-
                 <li class="settings__setting">
                     <span class="settings__icon">
                         <i class="far fa-user"></i>
                     </span>
-                    <span class="settings title">Friends</span>
+                    <span class="settings__title">Friends</span>
                 </li>
             </ul>
         </section>
